tests/paczka1/small_fuzzy/18538128.err
Error in line 1: SDdD63SMzBo S899 64,6
Error in line 5: KGcl07 S899 14,6
Error in line 2: MxMQOdY A903 32,2
Error in line 8: KGcl07 A903 12,8
